fix: fix styles.css (z-index) recommendation - target='_blank'

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,17 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
-  max-height: 756px; 
-  /* выше установили ограничения для секции */
+  max-height: 756px;
   display: flex;
+  position: relative;
 }
-
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 
 .logo {
   position: absolute;
@@ -53,6 +47,7 @@
   right: 0;
   width: 765px;
   height: 608px;
+  z-index: -1;
 }
 
 .header__square-pic {
@@ -62,7 +57,7 @@
   top: 64px;
   right: 0;
   position: absolute;
-  z-index: -1;
+  z-index: -2;
 }
 
 .description {
@@ -219,7 +214,7 @@
   width: 100%;
   overflow: hidden;
   margin: 0px;
-  z-index: -2;
+  z-index: 1;
   position: relative;
 }
 
@@ -250,7 +245,6 @@
   flex-wrap: wrap;
   margin: 80px auto 100px;
   gap: 20px;
-  z-index: 3;
 }
 
 .table__cell_theme_dark {
